# crewai-financial-assistant-web

./: .gitignore  Dockerfile  README.md  railway.toml
backend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
backend/frontend/src/: App.tsx
backend/frontend/src/components/: AnalysisForm.tsx  Header.tsx  ResultDisplay.tsx  StatusDisplay.tsx
backend/scripts/: update_readme.py
backend/src/: app.js
backend/src/api/: main.py
backend/src/crewai_financial_analyst/: crew.py  main.py  streamlit_app.py
backend/src/crewai_financial_analyst/config/: agents.yaml  tasks.yaml
backend/src/routes/: health.js
frontend/: .env.production  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: AnalysisForm.tsx  Header.tsx  ResultDisplay.tsx  StatusDisplay.tsx
frontend/src/types/: jsx.d.ts  react-markdown.d.ts
